--- a/packages/vagov-eslint/.eslintrc
+++ b/packages/vagov-eslint/.eslintrc
@@ -90,8 +90,10 @@
     "import/no-named-as-default": 0,
     "import/order": 0,
     "import/prefer-default-export": 0,
+    "jsx-a11y/anchor-has-content": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/heading-has-content": 0,
     "jsx-a11y/href-no-hash": 0,
     "jsx-a11y/label-has-associated-control": 0,
     "jsx-a11y/label-has-for": 0,
