--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "clean-webpack-plugin": "^2.0.1",
     "colors": "^1.1.2",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "extract-text-webpack-plugin": "2",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "is-docker": "^1.1.0",
@@ -51,6 +52,7 @@
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.5",
     "lerna": "^3.10.5",
+    "mini-css-extract-plugin": "^0.5.0",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
@@ -64,7 +66,6 @@
     "react-test-renderer": "^16.7.0",
     "recast": "^0.14.4",
     "resolve-url-loader": "^2.2.0",
-    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "sinon": "^4.1.6",
     "style-loader": "^0.19.0",
@@ -72,6 +73,6 @@
     "url-loader": "^0.6.2",
     "uswds": "1.4.2",
     "vagov-eslint": "file:./packages/vagov-eslint",
-    "webpack": "2"
+    "webpack": "4.29.6"
   }
 }
