alphabetize, add package-lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 *_site
-node_modules
-fractalEntry.js
 .babelcache
-build/
-dist/
 .DS_Store
-npm-debug.log
-public/dist
-packages/formation-react/*.js
-lerna-debug.log
 .eslintrc
 .eslintignore
 .prettierrc
-yarn-error.log
 .vscode
+build/
+dist/
+fractalEntry.js
+lerna-debug.log
+node_modules
+npm-debug.log
+package-lock.json
+packages/formation-react/*.js
+public/dist
+yarn-error.log
