--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -25,12 +25,13 @@
   "bugs": {
     "url": "https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/issues"
   },
+  "devDependencies": {
+    "moment": "^2.23.0",
+    "jest": "^24.7.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "foundation-sites": "5",
-    "jest": "^24.7.1",
-    "moment": "^2.23.0",
-    "node-sass": "^4.11.0"
+    "foundation-sites": "5"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
