--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "dependencies": {
     "@department-of-veterans-affairs/formation": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@mdx-js/mdx": "^0.16.6",
     "@mdx-js/tag": "^0.16.6",
     "classnames": "^2.2.6",
