--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,30 @@
 {
+  // Javascript settings.
   "presets": [
-    ["env", {
+    ["@babel/env", {
+      "forceAllTransforms": true,
       "targets": {
-        "uglify": true,
-        "browsers": ["last 2 versions", "ie 11", "not ie 10"]
+        "browsers": ["Chrome 60", "Firefox 57", "iOS 9", "Edge 14", "ChromeAndroid 64", "Safari 10", "ie 11"]
       },
-      "useBuiltIns": true
+      "useBuiltIns": "entry",
+      "modules": false,
+      "debug": true
     }],
-    "react",
-    "stage-2",
+    "@babel/react",
   ],
   "plugins": [
-    "lodash",
+    // Stage 2
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions",
+    // Stage 3
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    ["@babel/plugin-proposal-class-properties", { "loose": false }],
+    "@babel/plugin-proposal-json-strings",
     ["transform-react-remove-prop-types", {
       "removeImport": true
     }]
-  ]
+  ],
 }
