--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "axe-core": "^3.2.2",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-istanbul": "^5.1.1",
@@ -49,10 +50,7 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.2",
-    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "clean-webpack-plugin": "^2.0.1",
@@ -64,7 +62,7 @@
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "is-docker": "^1.1.0",
-    "jest": "^23.6.0",
+    "jest": "^24.7.1",
     "karma": "1.6",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
