--- a/.babelrc
+++ b/.babelrc
@@ -27,4 +27,27 @@
       "removeImport": true
     }]
   ],
+  "env": {
+    "test": {
+      "presets": [
+        ["@babel/env", {
+          "modules": true,
+        }],
+        "@babel/react",
+      ],
+      "plugins": [
+        "dynamic-import-node",
+        // Stage 2
+        "@babel/plugin-proposal-function-sent",
+        "@babel/plugin-proposal-export-namespace-from",
+        "@babel/plugin-proposal-numeric-separator",
+        "@babel/plugin-proposal-throw-expressions",
+        // Stage 3
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-meta",
+        ["@babel/plugin-proposal-class-properties", { "loose": false }],
+        "@babel/plugin-proposal-json-strings"
+      ]
+    },
+  },
 }
