Update Formation JS output (formation.js) to work standalone (#73)

--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -19,15 +19,15 @@
   },
   "scripts": {
     "build": "node ./scripts/build.js",
-    "prepare": "node ./scripts/build.js"
+    "prepare": "node ./scripts/build.js",
+    "test": "jest"
   },
   "bugs": {
     "url": "https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/issues"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "foundation-sites": "5",
-    "moment": "^2.23.0"
+    "foundation-sites": "5"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
