--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "publish": "lerna publish",
     "version": "lerna version --no-git-tag-version",
     "test-debug": "lerna run test-debug --scope=@department-of-veterans-affairs/formation-react",
-    "test-watch": "lerna run test-watch --scope=@department-of-veterans-affairs/formation-react"
+    "test-watch": "lerna run test-watch --scope=@department-of-veterans-affairs/formation-react",
+    "jest": "jest"
   },
   "browserslist": [
     "Chrome 60",
@@ -35,17 +36,32 @@
     "ie 11"
   ],
   "devDependencies": {
-    "axe-core": "^3.2.2",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "autoprefixer": "^9.5.1",
-    "babel-core": "^6.26.0",
+    "axe-core": "^3.2.2",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
-    "babel-preset-env": "^1.6.1",
+    "babel-jest": "^24.7.1",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-istanbul": "^5.1.1",
+    "babel-plugin-lodash": "^3.2.8",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.2",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "clean-webpack-plugin": "^2.0.1",
@@ -57,6 +73,7 @@
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "is-docker": "^1.1.0",
+    "jest": "^24.7.1",
     "karma": "1.6",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
