--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -9,6 +9,7 @@
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.2.1",
     "@mdx-js/mdx": "^0.16.6",
     "@mdx-js/tag": "^0.16.6",
+    "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
