add domready and check if event listener is already added

--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -26,6 +26,7 @@
     "url": "https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/issues"
   },
   "dependencies": {
+    "domready": "^1.0.8",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "foundation-sites": "5"
   },
