--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -26,9 +26,10 @@
     "url": "https://github.com/department-of-veterans-affairs/veteran-facing-services-tools/issues"
   },
   "dependencies": {
-    "domready": "^1.0.8",
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "foundation-sites": "5"
+    "domready": "^1.0.8",
+    "foundation-sites": "5",
+    "jest": "^24.8.0"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
