--- a/packages/formation/package.json
+++ b/packages/formation/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "build": "node ./scripts/build.js",
     "prepare": "node ./scripts/build.js",
+    "release": "PACKAGE=formation VERSION=$npm_package_version node ../../scripts/release.js",
     "test": "jest"
   },
   "bugs": {
