add graphql to handle error on build

--- a/package.json
+++ b/package.json
@@ -102,5 +102,8 @@
     "uswds": "1.6.10",
     "vagov-eslint": "file:./packages/vagov-eslint",
     "webpack": "4.29.6"
+  },
+  "dependencies": {
+    "graphql": "^14.5.3"
   }
 }
