--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
   "packages": [
-    "packages/*"
+    "packages/documentation",
+    "packages/formation",
+    "packages/formation-react",
+    "vagov-eslint"
   ],
   "version": "independent",
   "npmClient": "yarn",
