--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-images": "^3.0.3",
     "gatsby-remark-slug": "^0.1.0",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-git": "^1.0.2",
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
     "gatsby-transformer-react-docgen": "^3.0.0",
     "gatsby-transformer-remark": "^2.2.4",
