adjust eslint ignore rule

--- a/packages/vagov-eslint/.eslintignore
+++ b/packages/vagov-eslint/.eslintignore
@@ -5,5 +5,5 @@
 **/.cache/
 **/*.config.*
 **/*.conf.*
-/packages/formation-react/*.js
-/packages/accessible-react-app/*
+**/packages/formation-react/*.js
+**/packages/accessible-react-app/*
