First commit of Accessible React App demo. (#171)
* First commit of Accessible React App demo.

* exclude accessible-react-app from lerna bootstrap; add eslint exceptions

* remove lint command

* fix lerna config

* fix lerna config

* Updating the aside element.

* Adding lint rule for no parens on single argument arrow functions.

* Revert "Updating the aside element."

This reverts commit f0373bfa8c3dd2ce599002fe643f110096bb31d2.

* Reformatted the aside for an inline element.

* remove arrow parens rule

* add exclude files

* adjust eslint ignore rule

* adjust eslint ignore rule

* disable linting

* disable linting in jenkins

--- a/packages/vagov-eslint/.eslintignore
+++ b/packages/vagov-eslint/.eslintignore
@@ -5,4 +5,5 @@
 **/.cache/
 **/*.config.*
 **/*.conf.*
-/packages/formation-react/*.js
+**/packages/formation-react/*.js
+**/packages/accessible-react-app/*
