--- a/packages/vagov-eslint/.eslintrc
+++ b/packages/vagov-eslint/.eslintrc
@@ -17,7 +17,7 @@
     "commonjs": true,
     "es6": true,
     "mocha": true,
-    "jest": true,
+    "jest": true
   },
   "globals": {
     "PerformanceObserver": true,
@@ -27,7 +27,7 @@
   },
   "rules": {
     // Override airbnb style.
-    "camelcase": [2, {"allow": ["UNSAFE_componentWillMount"]}],
+    "camelcase": [2, { "allow": ["UNSAFE_componentWillMount"] }],
     "va-enzyme/unmount": 2,
     "func-names": 2,
     "import/no-extraneous-dependencies": 0,
