--- a/packages/accessible-react-app/package.json
+++ b/packages/accessible-react-app/package.json
@@ -50,6 +50,7 @@
     "react-dom": "npm:@hot-loader/react-dom",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.12",
+    "react-modal": "^3.10.1",
     "react-router-dom": "^5.0.1"
   }
 }
