--- a/packages/accessible-react-app/package.json
+++ b/packages/accessible-react-app/package.json
@@ -12,6 +12,7 @@
     "start": "yarn webpackDev",
     "server": "node server.js",
     "webpackDev": "webpack-dev-server --open --mode development --config webpack.dev.config --hot",
+    "webpackDev:lan": "webpack-dev-server --open --mode development --host 0.0.0.0 --config webpack.dev.config --hot",
     "webpackBuild": "webpack --mode production --config webpack.build.config"
   },
   "devDependencies": {
