--- a/packages/accessible-react-app/package.json
+++ b/packages/accessible-react-app/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf dist/",
     "lint:fix": "eslint --fix './src/**/*.{js,jsx}'",
     "start": "yarn webpackDev",
+    "start:lan": "yarn webpackDev:lan",
     "server": "node server.js",
     "webpackDev": "webpack-dev-server --open --mode development --config webpack.dev.config --hot",
     "webpackDev:lan": "webpack-dev-server --open --mode development --host 0.0.0.0 --config webpack.dev.config --hot",
