--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/formation-react",
-  "version": "5.1.0--beta-promobanner",
+  "version": "5.1.0",
   "description": "React implementation of patterns in Formation",
   "keywords": [
     "react",
