--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/documentation",
+    "packages/formation",
+    "packages/formation-react"
+  ],
   "version": "independent",
   "npmClient": "yarn",
   "npmClientArgs": ["--no-lockfile"]
