--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -11,7 +11,7 @@
     "@mdx-js/tag": "^0.16.6",
     "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
-    "gatsby": "^2.0.76",
+    "gatsby": "2.23.3",
     "gatsby-image": "^2.0.20",
     "gatsby-mdx": "^0.3.5",
     "gatsby-plugin-manifest": "^2.0.9",
@@ -43,7 +43,7 @@
   ],
   "license": "MIT",
   "resolutions": {
-    "graphql": "14.1.1"
+    "graphql": "14.6.0"
   },
   "scripts": {
     "build": "if [ -z \"$GITHUB_API_KEY\" ]; then echo \"No API key, skipping doc build\"; else gatsby build; fi",
