Upgrade packages to latest

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -7,15 +7,15 @@
     "@department-of-veterans-affairs/formation": "^6.6.3",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.2.1",
-    "@mdx-js/mdx": "^0.16.6",
-    "@mdx-js/tag": "^0.16.6",
-    "babel-preset-gatsby": "^0.1.11",
+    "@mdx-js/mdx": "^1.6.5",
+    "@mdx-js/tag": "^0.20.3",
+    "babel-preset-gatsby": "^0.4.9",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
-    "gatsby-mdx": "^0.3.5",
+    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
+    "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.20",
@@ -25,18 +25,19 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-git": "^1.0.2",
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
-    "gatsby-transformer-react-docgen": "^3.0.0",
+    "gatsby-transformer-react-docgen": "^5.2.5",
     "gatsby-transformer-remark": "^2.2.4",
     "gatsby-transformer-sharp": "^2.1.8",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^3.0.0",
+    "graphql": "15.1.0",
     "node-github-graphql": "^0.2.7",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0",
-    "react-live": "^1.12.0",
-    "uswds": "1.6.10"
+    "react-helmet": "^6.1.0",
+    "react-live": "^2.2.2",
+    "uswds": "2.7.0"
   },
   "keywords": [
     "gatsby"
