Replace gatsby-mdx with gatsby-plugin-mdx

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -8,13 +8,14 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.2.1",
     "@mdx-js/mdx": "^1.6.5",
+    "@mdx-js/react": "^1.6.5",
     "@mdx-js/tag": "^0.20.3",
     "babel-preset-gatsby": "^0.4.9",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
-    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
