--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -27,8 +27,8 @@
     "gatsby-source-git": "^1.0.2",
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
     "gatsby-transformer-react-docgen": "^5.2.5",
-    "gatsby-transformer-remark": "^2.2.4",
-    "gatsby-transformer-sharp": "^2.1.8",
+    "gatsby-transformer-remark": "2.8.15",
+    "gatsby-transformer-sharp": "2.5.5",
     "gh-pages": "^3.0.0",
     "graphql": "15.1.0",
     "node-github-graphql": "^0.2.7",
