--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -19,7 +19,7 @@
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sharp": "2.6.11",
     "gatsby-plugin-sitemap": "^2.0.6",
     "gatsby-remark-images": "^3.0.3",
     "gatsby-remark-slug": "^0.1.0",
