--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-page-creator": "^2.3.9",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "2.6.11",
