--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -11,7 +11,7 @@
     "@mdx-js/react": "^1.6.5",
     "babel-preset-gatsby": "^0.4.9",
     "classnames": "^2.2.6",
-    "gatsby": "^2.23.3",
+    "gatsby": "2.22.20",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-mdx": "^1.2.15",
