--- a/packages/documentation/plugins/mdx-pages/package.json
+++ b/packages/documentation/plugins/mdx-pages/package.json
@@ -2,7 +2,7 @@
   "name": "mdx-pages",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gatsby-node.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
