--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -36,7 +36,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^6.1.0",
-    "react-live": "^2.2.2",
+    "react-live": "1.12.0",
     "uswds": "1.6.10"
   },
   "keywords": [
