--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -7,44 +7,43 @@
     "@department-of-veterans-affairs/formation": "^6.6.3",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.2.1",
-    "@mdx-js/mdx": "^0.16.6",
-    "@mdx-js/tag": "^0.16.6",
-    "babel-preset-gatsby": "^0.1.11",
+    "@mdx-js/mdx": "^1.6.5",
+    "@mdx-js/react": "^1.6.5",
+    "@mdx-js/tag": "^0.20.3",
+    "babel-preset-gatsby": "^0.4.9",
     "classnames": "^2.2.6",
-    "gatsby": "^2.0.76",
-    "gatsby-image": "^2.0.20",
-    "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
+    "gatsby": "^2.23.3",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-sitemap": "^2.0.6",
-    "gatsby-remark-images": "^3.0.3",
+    "gatsby-plugin-sharp": "2.6.11",
+    "gatsby-plugin-sitemap": "^2.4.5",
+    "gatsby-remark-images": "^3.3.10",
+    "gatsby-remark-mermaid": "^2.0.0",
     "gatsby-remark-slug": "^0.1.0",
-    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-filesystem": "2.3.11",
     "gatsby-source-git": "^1.0.2",
-    "gatsby-transformer-javascript-frontmatter": "^2.0.5",
-    "gatsby-transformer-react-docgen": "^3.0.0",
-    "gatsby-transformer-remark": "^2.2.4",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "gh-pages": "^2.0.1",
+    "gatsby-transformer-javascript-frontmatter": "^2.3.5",
+    "gatsby-transformer-react-docgen": "^5.2.5",
+    "gatsby-transformer-remark": "^2.8.15",
+    "gatsby-transformer-sharp": "^2.5.5",
+    "gh-pages": "^3.0.0",
     "node-github-graphql": "^0.2.7",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
+    "puppeteer": "^4.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0",
-    "react-live": "^1.12.0",
+    "react-helmet": "^6.1.0",
+    "react-live": "1.12.0",
     "uswds": "1.6.10"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
-  "resolutions": {
-    "graphql": "14.1.1"
-  },
   "scripts": {
     "build": "if [ -z \"$GITHUB_API_KEY\" ]; then echo \"No API key, skipping doc build\"; else gatsby build; fi",
     "deploy": "if [ -z \"$GITHUB_API_KEY\" ]; then echo \"No API key, skipping doc build\"; else gatsby build --prefix-paths && gh-pages -d public -e .; fi",
