Use react-focus-lock to lock focus in submenus on mobile devices

--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
+    "react-focus-lock": "^2.4.0",
     "react-transition-group": "1"
   },
   "peerDependencies": {
