--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "webpack": "4.29.6"
   },
   "dependencies": {
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "graphql": "^14.5.3"
   }
 }
