--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-mdx": "file:plugins/gatsby-plugin-mdx(forked)",
     "gatsby-plugin-react-helmet": "^3.0.2",
