--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,9 @@ updates:
       timezone: "America/New_York"
     # Allow up to 10 open pull requests for npm dependencies
     open-pull-requests-limit: 1
+    ignore:
+      ## Ignore Gatbsy related dependencies since we're deprecating the Gatsby site
+      - dependency-name: "gatsby-plugin-react-helmet"
+      - dependency-name: "enzyme-adapter-react-16"
+      - dependency-name: "gatsby-remark-mermaid"
+      
