Stop auto-formatting with linting errors
I have no idea why it was adding the parens around single-argument arrow
functions...and then why eslint was saying it was an error according to
the prettier/prettier rule, but hey. This fixes it. :see_no_evil:

--- a/packages/vagov-eslint/.prettierrc
+++ b/packages/vagov-eslint/.prettierrc
@@ -7,5 +7,6 @@
   "trailingComma": "all",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "proseWrap": "preserve"
+  "proseWrap": "preserve",
+  "arrowParens": "avoid"
 }
