--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
+    "@whitespace/storybook-addon-html": "^2.0.1",
     "babel-loader": "^8.1.0",
     "react-is": "^17.0.1"
   }
