--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@department-of-veterans-affairs/formation": "^6.9.0",
+    "@storybook/addon-a11y": "^6.0.28",
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
