--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ orbs:
   node: circleci/node@3.0.0
 jobs:
   publish-storybook:
+    docker:
+      - image: circleci/node:14.5.0
     environment:
       CIRCLE_COMPARE_URL: << pipeline.project.git_url >>/compare/<< pipeline.git.base_revision >>..<<pipeline.git.revision>>
     steps:
