--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "resolve-url-loader": "^2.2.0",
     "sass-loader": "^6.0.7",
     "semver": "^7.3.2",
+    "simple-git": "^2.23.0",
     "sinon": "^4.1.6",
     "style-loader": "^0.19.0",
     "svg-url-loader": "^2.3.0",
