Use prepublish script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:js:changed": "npx vagov-eslint lint:js:changed",
     "lint:js:changed:fix": "npx vagov-eslint lint:js:changed:fix",
     "postinstall": "yarn bootstrap && node ./scripts/check-node-version.js",
+    "prepublish": "node ./scripts/prepublish.js",
     "publish": "lerna publish",
     "version": "lerna version --no-git-tag-version",
     "test-debug": "lerna run test-debug --scope=@department-of-veterans-affairs/formation-react",
