--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,20 @@ version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@1.3.1
 
+commands:
+  check-for-changes:
+    description: "Searches for any files matching the pattern in a diff result"
+    parameters:
+      in:
+        description: "Returns true if this pattern matches any folder/file in the diff"
+        type: string
+        default: "formation-react"
+      since:
+        description: "The git commit that we are checking against"
+        type: string
+    steps:
+      run: git diff --name-only HEAD << parameters.to >> | grep << parameters.in >>
+
 jobs:
   publish-storybook:
     executor: aws-cli/default
@@ -12,7 +26,10 @@ jobs:
     steps:
       - checkout
       - aws-cli/setup
-      - run: node ./scripts/publish-storybook.js
+      - check-for-changes:
+          in: "formation-react"
+          since: "<< pipeline.git.base_revision >>"
+      # - run: node ./scripts/publish-storybook.js
 
 workflows:
   publish:
