--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,13 @@ jobs:
     steps:
       - checkout
       - aws-cli/setup
+      - run:
+          name: "Get last published commit"
+          # Eventually this will be fetching some value from a BUILD.txt file on s3
+          command: export LAST_PUBLISHED_COMMIT=e50cd7bb7a05654cb38f78308eb2f9183a3ff815
       - check-for-changes:
           in: "formation-react"
-          since: "<< pipeline.git.base_revision >>"
+          since: $LAST_PUBLISHED_COMMIT
 
 workflows:
   publish:
