--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
     #   - image: circleci/node:14.5.0
     environment:
       LAST_COMMIT: << pipeline.git.base_revision >>
+      AWS_DEFAULT_REGION: us-gov-west-1
     steps:
       - checkout
       - aws-cli/setup
@@ -34,8 +35,11 @@ jobs:
       - check-for-changes:
           in: "formation-react"
           since: $LAST_PUBLISHED_COMMIT
+      - run: aws s3 ls
 
 workflows:
   publish:
     jobs:
-      - needs-to-publish-storybook
+      - needs-to-publish-storybook:
+          context:
+            - Platform
