Fetch the last published commit from build file
This will need to be improved

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ commands:
       - run:
           name: "Writing build info"
           command: |
-            echo " << parameters.data >> " > << parameters.dest >>/BUILD.txt
+            echo "<< parameters.data >>" > << parameters.dest >>/BUILD.txt
 
 jobs:
   needs-to-publish-storybook:
@@ -41,7 +41,7 @@ jobs:
           name: "Get last published commit"
           # Eventually this will be fetching some value from a BUILD.txt file on s3
           command: |
-            echo 'export LAST_PUBLISHED_COMMIT=e50cd7bb7a05654cb38f78308eb2f9183a3ff815'>> $BASH_ENV
+            echo "export LAST_PUBLISHED_COMMIT=$(curl -s https://dev-design.va.gov/storybook/BUILD.txt | sed 's/^.*=\\(.*\\)$/\\1/')" >> $BASH_ENV
             source $BASH_ENV
       - check-for-changes:
           in: "formation-react"
