--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,10 +51,8 @@ jobs:
       - checkout
       - run:
           name: "Get last published commit"
-          # Eventually this will be fetching some value from a BUILD.txt file on s3
           command: |
-            echo "export LAST_PUBLISHED_COMMIT=$(curl -s https://dev-design.va.gov/storybook/BUILD.txt | sed 's/^.*=\\(.*\\)$/\\1/')" >> $BASH_ENV
-            source $BASH_ENV
+            echo "export LAST_PUBLISHED_COMMIT=$(curl -s -f https://dev-design.va.gov/storybook/BUILD.txt | sed 's/^.*=\\(.*\\)$/\\1/')" >> $BASH_ENV
       - check-for-changes:
           in: "formation-react"
           since: $LAST_PUBLISHED_COMMIT
@@ -81,7 +79,7 @@ workflows:
     jobs:
       - needs-to-publish-storybook
       - publish-storybook:
-          # requires:
-          #   - needs-to-publish-storybook
+          requires:
+            - needs-to-publish-storybook
           context:
             - Platform
