--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ workflows:
     jobs:
       - needs-to-publish-storybook
       - publish-storybook:
-          requires:
-            - needs-to-publish-storybook
+          # requires:
+          #   - needs-to-publish-storybook
           context:
             - Platform
