--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ commands:
         type: string
     steps:
       - run:
+          shell: /bin/bash
           command: |
             set +e
             git diff --name-only HEAD << parameters.since >> | grep << parameters.in >>
