Combine the steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,10 @@ commands:
           command: |
             set +e
             git diff --name-only HEAD << parameters.since >> | grep << parameters.in >>
-            echo "Something"
-        # Halt if grep didn't find anything
-      - run: |
-          if [ "$?" = "1" ]; then
-            circleci-agent step halt
-          fi
+            # Halt without failing if grep didn't find a match
+            if [ "$?" = "1" ]; then
+              circleci-agent step halt
+            fi
 
   write-build-info:
     description: "Write relevant info to the current build/deploy to a file for referencing"
