--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ commands:
       - run:
           command: |
             git diff --name-only HEAD << parameters.since >> | grep << parameters.in >>
+            echo $?
             # Halt without failing if grep didn't find a match
             if [ "$?" = "1" ]; then
               circleci-agent step halt
