--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ commands:
     steps:
       - run:
           command: |
+            set +e
             git diff --name-only HEAD << parameters.since >> | grep << parameters.in >>
             echo $?
             # Halt without failing if grep didn't find a match
