--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ commands:
             echo $?
             # Halt without failing if grep didn't find a match
             if [ $? -eq 1 ]; then
+              echo "AM I RUNNING"
               circleci-agent step halt
             fi
 
